--- a/.github/workflows/build_launchx_blog.yml
+++ b/.github/workflows/build_launchx_blog.yml
@@ -15,7 +15,7 @@ jobs:
     - name: Setup GoHugo
       uses: peaceiris/actions-hugo@v2
       with:
-        hugo-version: 'v0.96.0'
+        hugo-version: '0.96.0'
     - name: Commit Update
       run: |
         echo ":: Eliminando versión previa ::"
@@ -26,8 +26,8 @@ jobs:
       run: |
         echo ":: Renombrando nueva version ::"
         mv public/ docs/
-        git config --global user.email "launchx@innovaccion.mx"
-        git config --global user.name "Launch X Backend Node JS"
+        git config --global user.email "launchx06519@innovaccion.mx"
+        git config --global user.name "Jose Luis López"
         git add .
         git commit -m "GitHub Actions: Build ok"
     - name: Push changes
